[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7"}
uuid = { version = "1", features = ["v4", "serde"] }


# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
